# PothosFlow

./: CMakeLists.txt  Changelog.txt  MainWindow.cpp  MainWindow.hpp  PothosFlow.cpp  PothosFlowOSX.sh  PothosGui.cpp  PothosGuiOSX.sh  PothosGuiUtils.cpp  PothosGuiUtils.hpp  README.md
AffinitySupport/: AffinityZoneEditor.cpp  AffinityZoneEditor.hpp  AffinityZonesComboBox.cpp  AffinityZonesDock.cpp  AffinityZonesDock.hpp  AffinityZonesMenu.cpp  AffinityZonesMenu.hpp  CpuSelectionWidget.cpp  CpuSelectionWidget.hpp
BlockTree/: BlockCache.cpp  BlockCache.hpp  BlockTreeDock.cpp  BlockTreeDock.hpp  BlockTreeWidget.cpp  BlockTreeWidget.hpp  BlockTreeWidgetItem.cpp  BlockTreeWidgetItem.hpp
ColorUtils/: ColorUtils.cpp  ColorUtils.hpp  ColorsDialog.cpp
Desktop/: CMakeLists.txt  install  make_scaled_icons.sh  pothos-flow.desktop  pothos-flow.xml  pothos-gui.xml  uninstall
EditWidgets/: CMakeLists.txt  CheckBox.cpp  ColorPicker.cpp  ComboBox.cpp  DTypeChooser.cpp  DoubleSpinBox.cpp  FileEntry.cpp  LineEdit.cpp  SpinBox.cpp  StringEntry.cpp  ToggleButton.cpp  ToggleSwitch.cpp
EvalEngine/: BlockEval.cpp  BlockEval.hpp  EnvironmentEval.cpp  EnvironmentEval.hpp  EvalEngine.cpp  EvalEngine.hpp  EvalEngineImpl.cpp  EvalEngineImpl.hpp  EvalGraph.cpp  EvalGraph.hpp  EvalNode.cpp  EvalNode.hpp  EvalTracer.cpp  EvalTracer.hpp  ThreadPoolEval.cpp  ThreadPoolEval.hpp  TopologyEval.cpp  TopologyEval.hpp  TopologyTraversal.cpp
GraphEditor/: Constants.cpp  Constants.hpp  DockingTabWidget.cpp  DockingTabWidget.hpp  GraphActionsDock.cpp  GraphActionsDock.hpp  GraphDraw.cpp  GraphDraw.hpp  GraphDrawSelection.cpp  GraphEditor.cpp  GraphEditor.hpp  GraphEditorDeserialization.cpp  GraphEditorExport.cpp  GraphEditorRenderedDialog.cpp  GraphEditorSerialization.cpp  GraphEditorTabs.cpp  GraphEditorTabs.hpp  GraphEditorTopologyStats.cpp  GraphState.cpp  GraphState.hpp
GraphObjects/: GraphBlock.cpp  GraphBlock.hpp  GraphBlockImpl.hpp  GraphBlockUpdate.cpp  GraphBreaker.cpp  GraphBreaker.hpp  GraphConnection.cpp  GraphConnection.hpp  GraphEndpoint.cpp  GraphEndpoint.hpp  GraphObject.cpp  GraphObject.hpp  GraphWidget.cpp  GraphWidget.hpp  GraphWidgetContainer.cpp  GraphWidgetContainer.hpp
HostExplorer/: HostExplorerDock.cpp  HostExplorerDock.hpp  HostSelectionTable.cpp  HostSelectionTable.hpp  PluginModuleTree.cpp  PluginModuleTree.hpp  PluginRegistryTree.cpp  PluginRegistryTree.hpp  SystemInfoTree.cpp  SystemInfoTree.hpp
MainWindow/: FormLayout.hpp  IconUtils.cpp  IconUtils.hpp  MainActions.cpp  MainActions.hpp  MainMenu.cpp  MainMenu.hpp  MainSettings.cpp  MainSettings.hpp  MainSplash.cpp  MainSplash.hpp  MainToolBar.cpp  MainToolBar.hpp  MainWindow.cpp  MainWindow.hpp
MessageWindow/: LoggerChannel.cpp  LoggerDisplay.cpp  LoggerDisplay.hpp
PropertiesPanel/: BlockPropertiesPanel.cpp  BlockPropertiesPanel.hpp  BreakerPropertiesPanel.cpp  ConnectionPropertiesPanel.cpp  GraphPropertiesPanel.cpp  GraphPropertiesPanel.hpp  PropertiesPanelDock.cpp  PropertiesPanelDock.hpp  PropertyEditWidget.cpp  PropertyEditWidget.hpp
cmake/Modules/: MacOSXBundleInfo.plist.in
debian/: changelog  control  copyright  libpothosqtcolorpicker0.install  pothos-flow.install  pothos-gui.install  pothos0.7-modules-flow.install  rules
icons/: PothosFlow.icns
qtcolorpicker/src/: qtcolorpicker.cpp  qtcolorpicker.h
